# Festival-log

./: .gitignore  .huggingface.yml  CHANGELOG  CONTRIBUTING.md  LICENSE  README.md  REPORT.md  app.py  db.py  festival_entry.txt  festival_log.db  pyproject.toml  requirements.txt  utils.py
.gitlab/issue_templates/: Bug_Report.md  Feature_Request.md
.gitlab/merge_request_templates/: Default.md
